format code globally